indexRouter and ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <title><%= title %></title>
   </head>
   <body>
-    <%-include(partials/navbar) %>
+    <%- include('partials/navbar') %>
     <div class="container">
       <h1>Welcome to GameStop</h1>
       <p class="message">
@@ -19,6 +19,6 @@
         <a href="/genres"><p class="link-title">Genres</p></a>
       </div>
     </div>
-    <%-include(partials/footer) %>
+    <%- include('partials/footer') %>
   </body>
 </html>
