--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,1 +1,11 @@
-<nav class="navbar">navbar</nav>
+<nav>
+  <ul>
+    <h1>GameWarehouse</h1>
+    <li>
+      <a href="/games">Games</a>
+    </li>
+    <li>
+      <a href="/genres">Genres</a>
+    </li>
+  </ul>
+</nav>
