--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,14 +9,16 @@
   <body>
     <%- include('partials/navbar') %>
     <div class="container">
-      <h1>Welcome to GameStop</h1>
-      <p class="message">
-        Video game enthusiasts greatest companion! Your only stop to acquire any
-        video games!
-      </p>
-      <div class="links">
-        <a href="/games"><p class="link-title">Games</p></a>
-        <a href="/genres"><p class="link-title">Genres</p></a>
+      <div class="main-content">
+        <h1>Welcome to GameStop</h1>
+        <p class="message">
+          Video game enthusiasts greatest companion! Your only stop to acquire
+          any video games!
+        </p>
+        <div class="links">
+          <a href="/games"><p class="link-title">Games</p></a>
+          <a href="/genres"><p class="link-title">Genres</p></a>
+        </div>
       </div>
     </div>
     <%- include('partials/footer') %>
