--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,6 +2,9 @@
   <ul>
     <h1>GameWarehouse</h1>
     <li>
+      <a href="/">Home</a>
+    </li>
+    <li>
       <a href="/games">Games</a>
     </li>
     <li>
