games and genres form routing & local db setup

--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -11,6 +11,7 @@
     <div class="container">
       <div class="main-content">
         <h1>Genres</h1>
+        <a href="/genres/new">new</a>
       </div>
     </div>
     <%- include('partials/footer') %>
