--- a/views/games.ejs
+++ b/views/games.ejs
@@ -11,6 +11,7 @@
     <div class="container">
       <div class="main-content">
         <h1>Games</h1>
+        <a href="/games/new">new</a>
       </div>
     </div>
     <%- include('partials/footer') %>
