--- a/views/games.ejs
+++ b/views/games.ejs
@@ -10,8 +10,24 @@
     <%- include('partials/navbar') %>
     <div class="container">
       <div class="main-content">
-        <h1>Games</h1>
-        <a href="/games/new">new</a>
+        <h1 class="content-header">
+          Games <a href="/games/new"><button>Add a Game</button></a>
+        </h1>
+        <div class="games-grid">
+          <% if(games) { games.forEach((game) =>{ %>
+          <div class="game-container">
+            <div class="img">
+              <img src="<%= game.img_src %>" alt="game image" />
+            </div>
+            <h2><%= game.game %></h2>
+            <h4><%= game.release_date %></h4>
+            <h1><%= game.price %></h1>
+            <p><%= game.description %></p>
+            <button>Delete</button>
+            <button>View Games</button>
+          </div>
+          <% })} %>
+        </div>
       </div>
     </div>
     <%- include('partials/footer') %>
