--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,15 +87,14 @@ footer {
 .main-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 80%;
+  justify-content: center;
+  width: 90%;
   gap: 1rem;
 }
 
 .content-header {
   display: flex;
-  align-items: center;
-  text-align: start;
+  justify-content: center;
   gap: 1rem;
   width: 100%;
 }
@@ -104,11 +103,14 @@ footer {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, 300px);
+  justify-content: center;
+  justify-items: center;
   gap: 1rem;
 }
 
 .game-container {
   max-width: 300px;
+  border: 2px solid black;
 }
 
 .img {
@@ -118,9 +120,13 @@ footer {
 
 img {
   max-width: 100%;
-  height: auto;
+  height: 300px;
   object-fit: cover;
   object-position: center;
+}
+
+.text {
+  padding: 0.5rem 1rem;
 }
 
 button {
