add game and genre forms ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <%- include('partials/navbar') %>
     <div class="container">
       <div class="main-content">
-        <h1>Welcome to GameStop</h1>
+        <h1>Welcome to <%= title %></h1>
         <p class="message">
           Video game enthusiasts greatest companion! Your only stop to acquire
           any video games!
