--- a/views/newGenre.ejs
+++ b/views/newGenre.ejs
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>GameWarehouse New Genre</title>
   </head>
   <body>
-    <form action="/genres/new" method="post">
-      <div>genre form</div>
-    </form>
+    <%- include('partials/navbar') %>
+    <div class="container">
+      <div class="main-content">
+        <h1>Add a New Genre</h1>
+        <form action="/genres/new" method="post">
+          <label for="genre"
+            >Genre: <input type="text" id="genre" name="genre" required
+          /></label>
+
+          <button>Submit</button>
+        </form>
+      </div>
+    </div>
+    <%- include('partials/footer') %>
   </body>
 </html>
