--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,7 +88,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 90%;
+  width: clamp(300px, 60%, 90%);
   gap: 1rem;
 }
 
@@ -147,4 +147,38 @@ button {
     color: #aedaa6;
     cursor: pointer;
   }
+}
+
+/* Forms */
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 3rem;
+  gap: 1rem;
+  background-color: rgb(224, 224, 224);
+  border-radius: 1rem;
+  box-shadow: 2px 2px 2px lightgray;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+}
+
+input,
+select,
+textarea {
+  border: 1px solid rgb(189, 189, 189);
+  transition: border;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  background-color: white;
+}
+
+input:focus {
+  border: 2px solid black;
 }
