individual game get router

--- a/views/games.ejs
+++ b/views/games.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/grid.css" />
     <title><%= title %></title>
   </head>
   <body>
@@ -25,7 +26,7 @@
               <h1><%= game.price %></h1>
               <p><%= game.description %></p>
               <button>Delete</button>
-              <button>View Games</button>
+              <button><a href="/games/<%= game.id %>">View Game</a></button>
             </div>
           </div>
           <% })} %>
