--- a/views/games.ejs
+++ b/views/games.ejs
@@ -25,8 +25,10 @@
               <h4><%= game.release_date %></h4>
               <h1><%= game.price %></h1>
               <p><%= game.description %></p>
-              <button>Delete</button>
-              <button><a href="/games/<%= game.id %>">View Game</a></button>
+              <form method="post" action="/games/delete/<%= game.id %>">
+                <button type="submit">Delete</button>
+                <button><a href="/games/<%= game.id %>">View Game</a></button>
+              </form>
             </div>
           </div>
           <% })} %>
