--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -14,7 +14,9 @@
         <% if(genres) { genres.forEach((genre) =>{ %>
         <div class="genre-container">
           <p><%= genre.genre %></p>
-          <button>Delete</button>
+          <form action="/genres/delete/<%= genre.id %>" method="post">
+            <button type="submit">Delete</button>
+          </form>
           <a href="/games?genre=<%= genre.genre %>"
             ><button>View Games</button></a
           >
